--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,13 +5,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
+    scroll-behavior:smooth;
     scroll-padding-top: 2rem;
 }
 :root{
     --main-color: #5F9DF7;
     --bg-color:#fff; 
     --text-color: #000;
+    --skill-bar: #F7B95F;
 
 
 }
@@ -324,46 +325,154 @@ h1{
 
 /* SKILLS SECTION */
 
-.mh-skills .mh-professional-skill{
-    padding-right: 60px;
+.skills_section{
+    width: 100%;
+    height: 100vh;
+    padding: 0px 13%;
+    background-color: rgba(0, 0, 0, 0.082);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.skills_head{
+    width: 100%;
+    margin-bottom: 100px;
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
+.skills_head h2{
+    font-size: 3.2em;
+    margin-bottom: -5px;
+}
+.skills_head h2 span{
     color: var(--text-color);
 }
-
-.mh-skills .mh-professional-skill h2{
-    font-size: 30px;
-    line-height: 40px;
-    text-align: center;
-    font-weight: 400;
-    margin-bottom: 60px;
-    
+.skills_main{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 50px;
 }
-.mh-professional-skills{
-    padding-left: 20%;
-
+.skills_main .skill_bar .info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:  0 10px;
+}
+.skill_bar .info p:nth-child(2){
+    font-weight: 500;
+}
+.skill_bar .bar{
+    width: 100%;
+    height: 10px;
+    background-color: rgba(0, 0, 0, 0.144);
+    border-radius: 25px;
+    margin-top: 5px;
+    position: relative;
+}
+.skill_bar .bar span{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    background-color: var(--skill-bar);
+    border-radius: 25px;
+}
+.skill_bar .bar .html{
+    width: 90%;
+    animation: html 2s;
+}
+@keyframes html {
+    0%{
+        width: 0%;
+    }100%{
+        width: 90%;
+    }
+}
+.skill_bar .bar .css{
+    width: 70%;
+    animation: css 2s;
+}
+@keyframes css {
+    0%{
+        width: 0%;
+    }100%{
+        width: 70%;
+    }
+}
+.skill_bar .bar .sass{
+    width: 20%;
+    animation: sass 2s;
+}
+@keyframes sass {
+    0%{
+        width: 0%;
+    }100%{
+        width: 20%;
+    }
+}
+.skill_bar .bar .js{
+    width: 60%;
+    animation: css 2s;
+}
+@keyframes js {
+    0%{
+        width: 0%;
+    }100%{
+        width: 60%;
+    }
+}
+.skill_bar .bar .react{
+    width: 45%;
+    animation: react 2s;
+}
+@keyframes react {
+    0%{
+        width: 0%;
+    }100%{
+        width: 45%;
+    }
+}
+.skill_bar .bar .node{
+    width: 10%;
+    animation: node 2s;
+}
+@keyframes node {
+    0%{
+        width: 0%;
+    }100%{
+        width: 10%;
+    }
+}
+.skill_bar .bar .express{
+    width: 65%;
+    animation: express 2s;
 }
 
-.mh-professional-skills h2{
-    font-size: 30px;
-    line-height: 40px;
-    text-align: center;
-    font-weight: 400;
-    margin-bottom: 60px;
-    padding-right: 2rem;
+.skill_bar .bar .mongo{
+    width: 10%;
+    animation: mongo 2s;
+}
+@keyframes mongo {
+    0%{
+        width: 0%;
+    }100%{
+        width: 10%;
+    }
 }
 
-.mh-professional-progress li{
-    display: inline-block;
-    margin: 0 auto;
-    float: none;
-    width: 48%;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.mh-progress{
-    margin-bottom: 10px;
-    font: 900 1.14/1;
-    color: var(--text-color);
+/* PORTFOLIO SECTION */
+.portfolio_section{
+    width: 100%;
+    height: 100vh;
+    padding: 0px 13%;
+    background-color: var(--main-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 
