--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -465,17 +465,40 @@ h1{
 
 /* PORTFOLIO SECTION */
 .portfolio_section{
-    width: 100%;
-    height: 100vh;
-    padding: 0px 13%;
     background-color: var(--main-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    height: 100vh;
 }
-
-
+.portfolio_main{
+    height: 0.7em;
+    display: flex;
+    justify-content: center;
+    
+}
+.portfolio-img img{
+  position: relative;
+  width: 40em;
+  padding: 60px;
+  border-radius: 100px;
+  
+}
+#portfolio-img01{
+    border-right: 200px;
+}
+.portfolio_head{
+    width: 100%;
+    margin-bottom: 100px;
+    display: grid;
+    place-items: center;
+    text-align: center;
+    
+}
+.portfolio_head h2{
+    font-size: 3.2em;
+    margin-bottom: -5px;
+}
+.portfolio_head h2 span{
+    color: var(--text-color);
+}
 /* ALTERNATE CSS */
 @media (max-width: 800px ) {
     .about-container{
@@ -545,6 +568,43 @@ h1{
     .about-image{
         align-items: center;
         justify-content: center;
+    }
+    .skills_main{
+        display:flex;
+        flex-direction: column;
+    }
+    .portfolio_main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .portfolio-img img{
+        size: 0.5em;
+        width: 100vw;
+        position:absolute;
+        margin-top: 0px;
+        padding-bottom: 60px;
+        border-radius: 100px;
+        
+    }
+    .portfolio-img{
+        margin: 0px;
+    
+    }
+    #portfolio-img01{
+        size: 400px;
+        padding-top:25px;
+        position: absolute;
+    }
+    #portfolio-img02{
+        padding-top: 600px;
+        position: absolute;
+    }
+    .portfolio_section{
+        padding-top: 100px;
+    }
+    .skills_section{
+        flex-direction: column;
     }
     
 }
