--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -464,41 +464,50 @@ h1{
 }
 
 /* PORTFOLIO SECTION */
-.portfolio_section{
-    background-color: var(--main-color);
-    height: 100vh;
-}
-.portfolio_main{
-    height: 0.7em;
+.portfolio-container{
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
-    
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+    background: var(--main-color);
+
 }
-.portfolio-img img{
-  position: relative;
-  width: 40em;
-  padding: 60px;
-  border-radius: 100px;
-  
+
+.left-text{
+    flex-basis: 30%;
 }
-#portfolio-img01{
-    border-right: 200px;
-}
-.portfolio_head{
-    width: 100%;
-    margin-bottom: 100px;
+
+.gallery{
+    flex-basis: 50%;
     display: grid;
-    place-items: center;
+    gap: 8px;
+    grid-template-columns: repeat(2,1fr);
+    grid-auto-rows:120px;
+} 
+.heading{
+    font-size: 3.2rem;
+    color: white;
     text-align: center;
-    
 }
-.portfolio_head h2{
-    font-size: 3.2em;
-    margin-bottom: -5px;
+.box{
+    background-size: cover;
+    background-position: top;
+    color: white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #222;
+    background-blend-mode: hard-light;
+    transition:all 0.3s ease-in-out;
 }
-.portfolio_head h2 span{
-    color: var(--text-color);
+.box:hover{
+    background-color:#999;
+    background-position: center;
+    box-shadow: 0 0 4px #fff;
 }
+
+
 /* ALTERNATE CSS */
 @media (max-width: 800px ) {
     .about-container{
@@ -573,38 +582,6 @@ h1{
         display:flex;
         flex-direction: column;
     }
-    .portfolio_main{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    .portfolio-img img{
-        size: 0.5em;
-        width: 100vw;
-        position:absolute;
-        margin-top: 0px;
-        padding-bottom: 60px;
-        border-radius: 100px;
-        
-    }
-    .portfolio-img{
-        margin: 0px;
     
-    }
-    #portfolio-img01{
-        size: 400px;
-        padding-top:25px;
-        position: absolute;
-    }
-    #portfolio-img02{
-        padding-top: 600px;
-        position: absolute;
-    }
-    .portfolio_section{
-        padding-top: 100px;
-    }
-    .skills_section{
-        flex-direction: column;
-    }
     
 }
